@@ -82,6 +82,7 @@
                 <div class="ib-square-bracket-right"></div>
                 <div class="ib-colon"></div>
                 <div class="ib-hash"></div>
+                <div class="ib-quote"></div>
             </div>
         </div>
 
