@@ -53,6 +53,7 @@
 @import "scss/characters/square-bracket-right";
 @import "scss/characters/colon";
 @import "scss/characters/hash";
+@import "scss/characters/quote";
 
 
 /*
