@@ -1,5 +1,6 @@
 v0.2.0:
 - Added Other - Hourglass.
+- Added Character - Quote.
 
 v0.1.0:
 - All 46 Icons.
